feature (bookings): View all bookings [Start #167152510]
