# src/routes/TripRoutes.js
@@ -8,6 +8,6 @@ const router = express.Router();
 
 router.get('/', AuthMiddleware.validateToken, TripController.getTrips);
 router.post('/', AuthMiddleware.validateToken, AuthMiddleware.checkIfUserIsAdmin, TripMiddleware.validateData, TripMiddleware.checkIfBusExists, TripController.addTrip);
-router.post('/cancel/:trip_id', AuthMiddleware.validateToken, AuthMiddleware.checkIfUserIsAdmin, TripMiddleware.checkIfTripExists, TripController.cancelTrip);
+router.patch('/:trip_id', AuthMiddleware.validateToken, AuthMiddleware.checkIfUserIsAdmin, TripMiddleware.checkIfTripExists, TripController.cancelTrip);
 
 export default router;
